<resources>
    <string name="app_name">E-commerce</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_basket">Basket</string>

</resources>