<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.myapplication.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.myapplication.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>